--- a/dashboard.html
+++ b/dashboard.html
@@ -172,7 +172,7 @@
 
         try {
             // We use POST because we are sending sensitive data (passwords)
-            const response = await fetch(MAIN_API_URL, {
+            const response = await fetch(API_URL, {
                 method: "POST",
                 body: JSON.stringify({
                     action: "changePassword",
