--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
         <h3>Change Password</h3>
         <input type="password" id="old_pwd" placeholder="Old Password">
         <input type="password" id="new_pwd" placeholder="New Password">
-        <button class="btn-primary" onclick="updatePassword()">Update</button>
+        <button class="btn-primary" onclick="savePassword()">Update</button>
         <button class="btn-secondary" onclick="closePwdModal()">Cancel</button>
         <p id="pwd-msg" style="font-size: 12px; margin-top: 10px;"></p>
     </div>
