--- a/dashboard.html
+++ b/dashboard.html
@@ -59,8 +59,8 @@
 <div id="pwd-modal" class="modal-overlay hidden">
     <div class="modal-card">
         <h3>Change Password</h3>
-        <input type="password" id="old_pwd" placeholder="Old Password">
-        <input type="password" id="new_pwd" placeholder="New Password">
+        <input type="password" id="oldPass" placeholder="Old Password">
+        <input type="password" id="newPass" placeholder="New Password">
         <button class="btn-primary" onclick="savePassword()">Update</button>
         <button class="btn-secondary" onclick="closePwdModal()">Cancel</button>
         <p id="pwd-msg" style="font-size: 12px; margin-top: 10px;"></p>
