--- a/dashboard.html
+++ b/dashboard.html
@@ -127,8 +127,8 @@
     function openPwdModal() { document.getElementById('pwd-modal').classList.remove('hidden'); }
     function closePwdModal() { 
         document.getElementById('pwd-modal').classList.add('hidden');
-        document.getElementById('old_pwd').value = '';
-        document.getElementById('new_pwd').value = '';
+        document.getElementById('oldPass').value = '';
+        document.getElementById('newPass').value = '';
     }
 
     async function doLogin() {
