--- a/dashboard.html
+++ b/dashboard.html
@@ -171,7 +171,7 @@
     }
 
     try {
-        const response = await fetch(MAIN_API_URL, {
+        const response = await fetch(API_URL, {
             method: "POST",
             body: JSON.stringify({
                 action: "changePassword",
