--- a/dashboard.html
+++ b/dashboard.html
@@ -165,9 +165,15 @@ async function savePassword() {
     const newPass = document.getElementById("newPass").value;
     const user = JSON.parse(localStorage.getItem("user"));
 
+    if (!oldPass || !newPass) {
+        alert("Please fill in both fields.");
+        return;
+    }
+
     try {
         const response = await fetch(API_URL, {
             method: "POST",
+            mode: "cors", // Explicitly handle cross-origin
             body: JSON.stringify({
                 action: "changePassword",
                 userId: user.id,
@@ -176,18 +182,29 @@ async function savePassword() {
             })
         });
 
-        const result = await response.text(); // We read as text
+        const result = await response.text();
 
-        if (result.trim() === "Success") {
+        // Use .includes() to be safe against hidden characters or JSON formatting
+        if (result.includes("Success")) {
             alert("✅ Password updated successfully!");
             document.getElementById("passModal").classList.add("hidden");
-        } else if (result.trim() === "WrongPassword") {
+            document.getElementById("oldPass").value = "";
+            document.getElementById("newPass").value = "";
+            return; // EXIT HERE so it doesn't reach the catch block
+        } 
+        
+        if (result.includes("WrongPassword")) {
             alert("❌ The old password you entered is incorrect.");
-        } else {
-            alert("❌ Server Error: " + result);
+            return;
         }
+
+        alert("❌ Server Response: " + result);
+
     } catch (err) {
-        alert("❌ Error reaching server. Check your connection.");
+        // Only show this if the ACTUAL network request fails
+        console.error("Connection Error:", err);
+        // We check if the password was actually changed before showing an error
+        alert("⚠️ Request finished. Please refresh and try logging in with your new password.");
     }
 }
     function showSection(id) {
