--- a/dashboard.html
+++ b/dashboard.html
@@ -61,8 +61,8 @@
         <h3>Change Password</h3>
         <input type="password" id="oldPass" placeholder="Old Password">
         <input type="password" id="newPass" placeholder="New Password">
-        <button id="savePassBtn" class="Passbtn-primary" onclick="savePassword()">Update</button>
-        <button class="Passbtn-secondary" onclick="closePwdModal()">Cancel</button>
+        <button id="savePassBtn" class="btn-primary" onclick="savePassword()">Update</button>
+        <button class="btn-secondary" onclick="closePwdModal()">Cancel</button>
         <p id="pwd-msg" style="font-size: 12px; margin-top: 10px;"></p>
     </div>
 </div>
