--- a/dashboard.html
+++ b/dashboard.html
@@ -87,8 +87,8 @@
             <li onclick="showSection('view-all')">📄 View All Invoices</li>
             <li onclick="showSection('update')">✏️ Edit or Delete</li>
             <li onclick="showSection('report')">📊 Reports</li>
-            <li onclick="toggleSettings()">⚙️ Settings ▾</li>
             <li onclick="toggleMenu('clients-menu')">👥 Clients ▾</li>
+            <li onclick="toggleMenu('settings-menu')">⚙️ Settings ▾</li>
 <ul id="clients-menu" class="submenu">
     <li onclick="showSection('add-client')">👤 Add Client</li>
     <li onclick="showSection('view-clients')">📋 Client List</li>
