--- a/dashboard.html
+++ b/dashboard.html
@@ -248,6 +248,7 @@ async function savePassword() {
             'update': 'update.html',
             'report': 'reports.html',
             'add-client': 'add-client.html',    // New
+            'view-clients': 'view-clients.html', // Add this line
             'biz-settings': 'business-settings.html',
             'tax-settings': 'tax-settings.html',
             'currency-settings': 'currency-settings.html'
