--- a/view-clients.html
+++ b/view-clients.html
@@ -81,7 +81,7 @@
 </div>
 
 <script>
-    const API_URL = "YOUR_NEW_DEPLOYED_URL_HERE"; 
+    const API_URL = "https://script.google.com/macros/s/AKfycbwKgib802NVM4Mn31in9KhfoMHPA9b2tubCMLq7lDrCmthRNyryOiPaAT5FBrnL_qto/exec"; 
     let allClients = []; // Global storage for filtering
 
     async function loadClients() {
