--- a/dashboard.html
+++ b/dashboard.html
@@ -275,7 +275,7 @@
             'create': 'invoice-form.html',
             'view-all': 'view-all.html',
             'update': 'update.html',
-            'report': 'reports.html',
+            'report': 'report1.html',
             'add-client': 'add-client.html',
             'view-clients': 'view-clients.html',
             'biz-settings': 'business-settings.html',
